; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-annot.c_pdf_annot_author.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-annot.c_pdf_annot_author.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@T = common dso_local global i32 0, align 4
@markup_subtypes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pdf_annot_author(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %7 = load i32, i32* @T, align 4
  %8 = call i32 @PDF_NAME(i32 %7)
  %9 = load i32, i32* @markup_subtypes, align 4
  %10 = call i32 @check_allowed_subtypes(i32* %5, %struct.TYPE_4__* %6, i32 %8, i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @T, align 4
  %16 = call i32 @PDF_NAME(i32 %15)
  %17 = call i8* @pdf_dict_get_text_string(i32* %11, i32 %14, i32 %16)
  ret i8* %17
}

declare dso_local i32 @check_allowed_subtypes(i32*, %struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i8* @pdf_dict_get_text_string(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
